--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+gunicorn==22.0.0
 dataclasses-json==0.6.4
 datasets==2.19.0
 debugpy==1.8.1
